--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
+ipykernel
 pandas
 numpy
-
--e.
+matplotlib
+plotly
+seaborn
+scikit-learn
+pymongo
+from_root
+dill
+certifi
+PyYAML
+boto3
+mypy-boto3-s3
+botocore
+fastapi
+python-multipart
+uvicorn
+jinja2
+imblearn
+-e .
