--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,15 +52,14 @@ jobs:
         id: build-image
         env:
           IMAGE_TAG: latest
-          ECR_REPO_URI: ${{ secrets.AWS_ECR_REPO_URI }}
         run: |
-          echo "Building Docker image..."
-          docker build -t $ECR_REPO_URI:$IMAGE_TAG .
-          echo "Pushing Docker image..."
-          docker push $ECR_REPO_URI:$IMAGE_TAG
-          echo "Image pushed: $ECR_REPO_URI:$IMAGE_TAG"
-      
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG .
+          docker push ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG
           
+
           
   Continuous-Deployment:
     needs: build-and-push-ecr-image
