--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,112 +1,112 @@
-name: CI/CD Pipeline
+# name: CI/CD Pipeline
 
-on:
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - 'README.md'
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths-ignore:
+#       - 'README.md'
 
-permissions:
-  id-token: write
-  contents: read
+# permissions:
+#   id-token: write
+#   contents: read
 
-jobs:
-  integration:
-    name: Continuous Integration
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4  # Updated to v4
+# jobs:
+#   integration:
+#     name: Continuous Integration
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v4  # Updated to v4
 
-      - name: Lint code
-        run: echo "Linting repository"
+#       - name: Lint code
+#         run: echo "Linting repository"
 
-      - name: Run unit tests
-        run: echo "Running unit tests"
+#       - name: Run unit tests
+#         run: echo "Running unit tests"
 
-  build-and-push-ecr-image:
-    name: Continuous Delivery
-    needs: integration
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+#   build-and-push-ecr-image:
+#     name: Continuous Delivery
+#     needs: integration
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
 
-      - name: Install Utilities
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq unzip
+#       - name: Install Utilities
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y jq unzip
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2  # Updated to v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v2  # Updated to v2
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+#       - name: Login to Amazon ECR
+#         id: login-ecr
+#         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}  # Use ECR login output
-          ECR_REPOSITORY: your-ecr-repo-name  # Replace with your ECR repo name
-          IMAGE_TAG: latest
-        run: |
-          # Verify Dockerfile presence
-          ls -la
-          if [ ! -f Dockerfile ]; then
-            echo "ERROR: Dockerfile not found!"
-            exit 1
-          fi
+#       - name: Build, tag, and push image
+#         env:
+#           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}  # Use ECR login output
+#           ECR_REPOSITORY: your-ecr-repo-name  # Replace with your ECR repo name
+#           IMAGE_TAG: latest
+#         run: |
+#           # Verify Dockerfile presence
+#           ls -la
+#           if [ ! -f Dockerfile ]; then
+#             echo "ERROR: Dockerfile not found!"
+#             exit 1
+#           fi
       
-          # Build and push
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+#           # Build and push
+#           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+#           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-  continuous-deployment:
-    name: Continuous Deployment
-    needs: build-and-push-ecr-image
-    runs-on: self-hosted
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+#   continuous-deployment:
+#     name: Continuous Deployment
+#     needs: build-and-push-ecr-image
+#     runs-on: self-hosted
+#     steps:
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
+#       - name: Login to Amazon ECR
+#         uses: aws-actions/amazon-ecr-login@v1
       
-      - name: Pull latest image
-        run: |
-          docker pull ${{ needs.build-and-push-ecr-image.outputs.image }}
+#       - name: Pull latest image
+#         run: |
+#           docker pull ${{ needs.build-and-push-ecr-image.outputs.image }}
 
-      - name: Stop and remove existing container
-        run: |
-          docker ps -q --filter "name=sensor" | xargs -r docker stop
-          docker ps -a -q --filter "name=sensor" | xargs -r docker rm
+#       - name: Stop and remove existing container
+#         run: |
+#           docker ps -q --filter "name=sensor" | xargs -r docker stop
+#           docker ps -a -q --filter "name=sensor" | xargs -r docker rm
 
-      - name: Run Docker container
-        env:
-          IMAGE_URI: ${{ needs.build-and-push-ecr-image.outputs.image }}
-        run: |
-          docker run -d \
-            -p 8080:8080 \
-            --name=sensor \
-            -e MONGO_DB_URL="${{ secrets.MONGO_DB_URL }}" \
-            -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -e AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" \
-            $IMAGE_URI
+#       - name: Run Docker container
+#         env:
+#           IMAGE_URI: ${{ needs.build-and-push-ecr-image.outputs.image }}
+#         run: |
+#           docker run -d \
+#             -p 8080:8080 \
+#             --name=sensor \
+#             -e MONGO_DB_URL="${{ secrets.MONGO_DB_URL }}" \
+#             -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+#             -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+#             -e AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" \
+#             $IMAGE_URI
 
-      - name: Cleanup unused images
-        run: |
-          docker image prune -af
+#       - name: Cleanup unused images
+#         run: |
+#           docker image prune -af
 
 
 
