--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: workflow
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4  # Updated to v4
+        uses: actions/checkout@v3
 
       - name: Lint code
         run: echo "Linting repository"
@@ -31,15 +31,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Install Utilities
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
-
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2  # Updated to v2
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -49,165 +48,53 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}  # Use ECR login output
-          ECR_REPOSITORY: your-ecr-repo-name  # Replace with your ECR repo name
           IMAGE_TAG: latest
         run: |
-          # Verify Dockerfile presence
-          ls -la
-          if [ ! -f Dockerfile ]; then
-            echo "ERROR: Dockerfile not found!"
-            exit 1
-          fi
-      
-          # Build and push
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG .
+          docker push ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG
+          
 
-  continuous-deployment:
-    name: Continuous Deployment
+          
+  Continuous-Deployment:
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       
-      - name: Pull latest image
-        run: |
-          docker pull ${{ needs.build-and-push-ecr-image.outputs.image }}
-
-      - name: Stop and remove existing container
-        run: |
-          docker ps -q --filter "name=sensor" | xargs -r docker stop
-          docker ps -a -q --filter "name=sensor" | xargs -r docker rm
-
-      - name: Run Docker container
-        env:
-          IMAGE_URI: ${{ needs.build-and-push-ecr-image.outputs.image }}
-        run: |
-          docker run -d \
-            -p 8080:8080 \
-            --name=sensor \
-            -e MONGO_DB_URL="${{ secrets.MONGO_DB_URL }}" \
-            -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -e AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" \
-            $IMAGE_URI
-
-      - name: Cleanup unused images
-        run: |
-          docker image prune -af
-
-
-
-
-# name: workflow
-
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths-ignore:
-#       - 'README.md'
-
-# permissions:
-#   id-token: write
-#   contents: read
-
-# jobs:
-#   integration:
-#     name: Continuous Integration
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
-
-#       - name: Lint code
-#         run: echo "Linting repository"
-
-#       - name: Run unit tests
-#         run: echo "Running unit tests"
-
-#   build-and-push-ecr-image:
-#     name: Continuous Delivery
-#     needs: integration
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
-
-#       - name: Install Utilities
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y jq unzip
-#       - name: Configure AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-#       - name: Login to Amazon ECR
-#         id: login-ecr
-#         uses: aws-actions/amazon-ecr-login@v1
-
-#       - name: Build, tag, and push image to Amazon ECR
-#         id: build-image
-#         env:
-#           IMAGE_TAG: latest
-#         run: |
-#           # Build a docker container and
-#           # push it to ECR so that it can
-#           # be deployed to ECS.
-#           docker build -t ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG .
-#           docker push ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG
-          
-
-          
-#   Continuous-Deployment:
-#     needs: build-and-push-ecr-image
-#     runs-on: self-hosted
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-
-#       - name: Configure AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-#       - name: Login to Amazon ECR
-#         id: login-ecr
-#         uses: aws-actions/amazon-ecr-login@v1
       
-      
-#       - name: Pull latest images
-#         run: |
-#          docker pull ${{ secrets.AWS_ECR_REPO_URI }}:latest
+      - name: Pull latest images
+        run: |
+         docker pull ${{ secrets.AWS_ECR_REPO_URI }}:latest
          
                 
-#       # - name: Stop and remove visibility container if running
-#       #   run: |
-#       #    docker ps -q --filter "name=visibility" | grep -q . && docker stop visibility && docker rm -fv visibility
-#       - name: Run Docker Image to serve users
-#         run: |
-#          docker run -d -p 8080:8080 --name=sensor -e 'MONGO_DB_URL=${{ secrets.MONGO_DB_URL }}' -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}' ${{ secrets.AWS_ECR_REPO_URI }}:latest
+      # - name: Stop and remove visibility container if running
+      #   run: |
+      #    docker ps -q --filter "name=visibility" | grep -q . && docker stop visibility && docker rm -fv visibility
+      - name: Run Docker Image to serve users
+        run: |
+         docker run -d -p 8080:8080 --name=sensor -e 'MONGO_DB_URL=${{ secrets.MONGO_DB_URL }}' -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}' ${{ secrets.AWS_ECR_REPO_URI }}:latest
 
-#       - name: Clean previous images and containers
-#         run: |
-#          docker system prune -f
+      - name: Clean previous images and containers
+        run: |
+         docker system prune -f
 
 
 
